arkts_static_test/03_Types/ets_cases/3.10_Type_never/compile-fail/TYP_03_10_008_FAIL_NEVER_NO_THROW.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id TYP_03_10_008_FAIL_NEVER_NO_THROW
 * @expect compile-fail
 * @section 3.10
 * @design never 函数空体（无 throw/无限循环）应失败
 * @note 反向用例
 */
function emptyNever(): never {
}